# Tarea-2-CC4102-2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: avl.hpp  splay.hpp  utils.hpp
src/arboles/: avl.cpp  splay.cpp
src/experimentos/base/: crear_datasets.cpp  ia_bs.cpp  ia_bu.cpp  io_bs.cpp  io_bu.cpp
src/experimentos/teoremas/: sat.cpp  wst.cpp
